Added State Machine/ Rough Physics
* added a state machine to the player
* added rough physics

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="js/keyboard.js"></script>
         <script src="js/Player.js"></script>
         <script src="js/Floor.js"></script>
+        <script src="js/Death.js"></script>
         <script src="js/Levels.js"></script>
         <script src="js/Game.js"></script>
     </body>
