added art assets/ more player collision
* added some art assets.

* added slide decay on player movement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="js/pixi.min.js"></script>
         <script src="js/keyboard.js"></script>
         <script src="js/Player.js"></script>
+        <script src="js/Wall.js"></script>
         <script src="js/Floor.js"></script>
         <script src="js/Death.js"></script>
         <script src="js/Levels.js"></script>
