--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="js/Wall.js"></script>
         <script src="js/Floor.js"></script>
         <script src="js/Death.js"></script>
+        <script src="js/Cake.js"></script>
         <script src="js/Levels.js"></script>
         <script src="js/Game.js"></script>
     </body>
