--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="js/Floor.js"></script>
         <script src="js/Death.js"></script>
         <script src="js/Cake.js"></script>
+        <script src="js/Turret.js"></script>
         <script src="js/Levels.js"></script>
         <script src="js/Game.js"></script>
     </body>
