--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="js/Death.js"></script>
         <script src="js/Cake.js"></script>
         <script src="js/Turret.js"></script>
+        <script src="js/Bullet.js"></script>
         <script src="js/Levels.js"></script>
         <script src="js/Game.js"></script>
     </body>
